--- a/sample/src/main/res/layout/layout_pull_to_refresh_list_view.xml
+++ b/sample/src/main/res/layout/layout_pull_to_refresh_list_view.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.repo.xw.library.views.PullToRefreshLayout
-    android:id="@+id/pullToRefreshLayout"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <com.repo.xw.library.views.PullListView
-        android:id="@+id/pullListView"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:listSelector="@android:color/transparent"
-        android:overScrollMode="never"
-        android:scrollingCache="false">
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@android:color/white">
 
-    </com.repo.xw.library.views.PullListView>
-</com.repo.xw.library.views.PullToRefreshLayout>
+    </android.support.v7.widget.Toolbar>
+
+    <com.repo.xw.library.views.PullToRefreshLayout
+        android:id="@+id/pullToRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.repo.xw.library.views.PullListView
+            android:id="@+id/pullListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:listSelector="@android:color/transparent"
+            android:overScrollMode="never"
+            android:scrollingCache="false">
+
+        </com.repo.xw.library.views.PullListView>
+    </com.repo.xw.library.views.PullToRefreshLayout>
+</LinearLayout>
