--- a/sample/src/main/res/layout/layout_has_no_data.xml
+++ b/sample/src/main/res/layout/layout_has_no_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.repo.xw.library.views.PullLinearLayout
+<com.xw.repo.refresh.PullLinearLayout
     android:id="@+id/root_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -14,4 +14,4 @@
         android:drawableTop="@mipmap/icon_has_no_data"
         android:gravity="center"
         android:text="@string/has_no_data"/>
-</com.repo.xw.library.views.PullLinearLayout>
+</com.xw.repo.refresh.PullLinearLayout>
