--- a/PullToRefresh/src/main/res/layout/layout_load_foot.xml
+++ b/PullToRefresh/src/main/res/layout/layout_load_foot.xml
@@ -3,7 +3,7 @@
     android:id="@+id/foot_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
