--- a/PullToRefresh/src/main/res/layout/layout_xw_ptr_refresh_head.xml
+++ b/PullToRefresh/src/main/res/layout/layout_xw_ptr_refresh_head.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -14,29 +13,29 @@
         android:paddingTop="20dp">
 
         <ImageView
-            android:id="@+id/head_arrow_img"
+            android:id="@+id/head_xw_ptr_arrow_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="60dp"
-            android:src="@mipmap/icon_arrow"/>
+            android:src="@mipmap/icon_xw_ptr_arrow"/>
 
         <ProgressBar
-            android:id="@+id/head_progress_bar"
+            android:id="@+id/head_xw_ptr_progress_bar"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="65dp"
             android:indeterminate="false"
-            android:indeterminateDrawable="@anim/anim_refresh_loading"
+            android:indeterminateDrawable="@anim/anim_xw_ptr_refresh_loading"
             android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/head_hint_text"
+            android:id="@+id/head_xw_ptr_hint_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/pull_to_refresh"
+            android:text="@string/xw_ptr_pull_to_refresh"
             android:textColor="@color/refresh_text_color_gray"
             android:textSize="13sp"/>
     </RelativeLayout>
